fixed answer question button hidden on small screen

--- a/app/static/style/css/112style.css
+++ b/app/static/style/css/112style.css
@@ -1,3 +1,7 @@
+.modal-footer-btn {
+  margin: 10px;
+}
+
 .button-collapse {
   color: #ffffff;
 }
